--- a/flutter_screen_recording_web/pubspec.yaml
+++ b/flutter_screen_recording_web/pubspec.yaml
@@ -10,7 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_screen_recording_platform_interface: ^1.0.3
+  flutter_screen_recording_platform_interface:
+    git:
+        url: https://github.com/vahid75hj/flutter_screen_recording.git
+        ref: master
+        path: flutter_screen_recording_platform_interface
 
   flutter_web_plugins:
     sdk: flutter
