--- a/flutter_screen_recording/pubspec.yaml
+++ b/flutter_screen_recording/pubspec.yaml
@@ -11,8 +11,16 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_foreground_task: ^6.0.0+1
-  flutter_screen_recording_platform_interface: ^1.0.3
-  flutter_screen_recording_web: ^1.0.8
+  flutter_screen_recording_platform_interface:
+    git:
+        url: https://github.com/vahid75hj/flutter_screen_recording.git
+        ref: master
+        path: flutter_screen_recording_platform_interface
+  flutter_screen_recording_web:
+    git:
+      url: https://github.com/vahid75hj/flutter_screen_recording.git
+      ref: master
+      path: flutter_screen_recording_web
 
 dev_dependencies:
   flutter_test:
